feat(jigsaw): модули, исправления классов